fixed white space

--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ main{
     font-family: Arial, Helvetica, "Helvetica Neue", sans-serif;
 }
 
+.main-adjust{
+    height: 100vh;
+}
+
 #index-main{
     display: flex;
     flex-direction: row;
@@ -230,6 +234,11 @@ footer{
         display: flex;
         flex-direction: column;
         width: 100%;
+        height: 80vh;
+    }
+
+    .main-adjust{
+        height: 80vh;
     }
 
     .title{
